# custom-pc-parts-ecom

./: .gitignore  README.md  components.csv  docker-compose.yml  package-lock.json  package.json
Backend/Backend Framework/: PCBuilder.yaml
Backend/backend-implementation/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  seed.py
Backend/backend-implementation/app/: .env  auth.py  crud.py  database.py  main.py  models.py  openapi.json  schemas.py
Backend/backend-implementation/app/api/: random-reviews.py
Backend/backend-implementation/app/api/reviews/: route.js
Backend/backend-implementation/app/routers/: builds.py  components.py  reviews.py  users.py
Backend/backend-implementation/app/tests/: conftest.py  test_components.py  test_users.py
Backend/backend-implementation/seed_data/: builds.json  case.json  cpu-cooler.json  cpu.json  memory.json  monitor.json  motherboard.json  operatingsystem.json  powersupply.json  reviews.json  storage.json  users.json  videocard.json
Backend/backend-implementation/src/pcbuilder/: __about__.py
Backend/backend-implementation/tests/: conftest.py
Backend/pc-builder/: LICENSE.txt  README.md  pyproject.toml
Backend/pc-builder/src/pc_builder/: __about__.py  models.py  schemas.py
Backend/pc-builder/tests/: __init__.py
Frontend/Frontend Implementation/: Dockerfile  next.config.js  package-lock.json  package.json
Frontend/Frontend Implementation/src/app/: globals.css  layout.tsx  page.tsx
Frontend/Frontend Implementation/src/app/(pages)/account/: layout.tsx  page.tsx
Frontend/Frontend Implementation/src/app/(pages)/browse-components/: page.tsx
Frontend/Frontend Implementation/src/app/(pages)/builder/: page.tsx
Frontend/Frontend Implementation/src/app/(pages)/category/: page.tsx
Frontend/Frontend Implementation/src/app/(pages)/contact/: page.tsx
Frontend/Frontend Implementation/src/app/(pages)/forgot-password/: page.tsx
Frontend/Frontend Implementation/src/app/(pages)/login/: page.tsx
Frontend/Frontend Implementation/src/app/(pages)/signup/: page.tsx
Frontend/Frontend Implementation/src/app/(pages)/user-builds/: page.tsx
Frontend/Frontend Implementation/src/app/(pages)/user-builds/[id]/: page.tsx
Frontend/Frontend Implementation/src/app/category/case/: page.tsx
Frontend/Frontend Implementation/src/app/category/case/[id]/: page.tsx
Frontend/Frontend Implementation/src/app/category/cpu/: page.tsx
Frontend/Frontend Implementation/src/app/category/cpu-cooler/: page.tsx
Frontend/Frontend Implementation/src/app/category/cpu-cooler/[id]/: page.tsx
Frontend/Frontend Implementation/src/app/category/cpu-cooler/[uid]/: page.tsx
Frontend/Frontend Implementation/src/app/category/cpu/[id]/: page.tsx
Frontend/Frontend Implementation/src/app/category/cpu/[uid]/: page.tsx
Frontend/Frontend Implementation/src/app/category/memory/: page.tsx
Frontend/Frontend Implementation/src/app/category/memory/[id]/: page.tsx
Frontend/Frontend Implementation/src/app/category/monitor/: page.tsx
Frontend/Frontend Implementation/src/app/category/monitor/[id]/: page.tsx
Frontend/Frontend Implementation/src/app/category/motherboard/: page.tsx
Frontend/Frontend Implementation/src/app/category/motherboard/[id]/: page.tsx
Frontend/Frontend Implementation/src/app/category/motherboards/: page.tsx
Frontend/Frontend Implementation/src/app/category/operating-system/: page.tsx
Frontend/Frontend Implementation/src/app/category/operating-system/[id]/: page.tsx
Frontend/Frontend Implementation/src/app/category/operating-system/[uid]/: page.tsx
Frontend/Frontend Implementation/src/app/category/power-supply/: page.tsx
Frontend/Frontend Implementation/src/app/category/power-supply/[id]/: page.tsx
Frontend/Frontend Implementation/src/app/category/storage/: page.tsx
Frontend/Frontend Implementation/src/app/category/storage/[id]/: page.tsx
Frontend/Frontend Implementation/src/app/category/video-card/: page.tsx
Frontend/Frontend Implementation/src/app/category/video-card/[id]/: page.tsx
Frontend/Frontend Implementation/src/app/pages/about/: page.tsx
Frontend/Frontend Implementation/src/app/pages/componentsPage/: page.tsx
Frontend/Frontend Implementation/src/app/pages/contact/: page.tsx
Frontend/Frontend Implementation/src/app/pages/forgot-password/: page.tsx
Frontend/Frontend Implementation/src/app/pages/login/: page.tsx
Frontend/Frontend Implementation/src/app/pages/signup/: page.tsx
Frontend/Frontend Implementation/src/app/pages/user-builds/: page.tsx
Frontend/Frontend Implementation/src/app/search/: page.tsx
Frontend/Frontend Implementation/src/components/: Footers.tsx  Navbar.tsx  SearchContext.tsx  UuidProvider.tsx  hero-section.tsx  new-arrivals-section.tsx  product-card.tsx  search-history-section.tsx  sidebar.tsx  star-rating.tsx  your-builds-section.tsx
Frontend/Frontend Implementation/src/components/aboutpage/: about-page.tsx  team-member.tsx
Frontend/Frontend Implementation/src/components/browsePage/: component-grid.tsx
Frontend/Frontend Implementation/src/components/category/: category-page.tsx  filter-sidebar.tsx  index.tsx  pagination.tsx  product-grid.tsx
Frontend/Frontend Implementation/src/data/: filter-configs.ts  sample-products.ts
Frontend/Frontend Implementation/src/lib/: auth.ts  uuid-utils.js
